# cjong4

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: copilot-instructions.md
include/cjong4/: action.h  location.h  phase.h  player.h  rules.h  state.h  state_ankan.h  state_chi.h  state_discard.h  state_init.h  state_kakan.h  state_kan.h  state_minkan.h  state_pass.h  state_pon.h  state_query.h  state_riichi.h  state_ron.h  state_round.h  state_settle.h  state_tsumo.h  state_yaku.h  tile.h  tile_const.h  wind.h
include/cjong4/core/: location.h  phase.h  rules.h  state.h  state_init.h  state_kan.h  state_pass.h  state_query.h  state_riichi.h  state_round.h  state_settle.h  state_tsumo.h  state_yaku.h  tile_const.h  wind.h
include/cjong4/manager/: delegate.h  manager.h  player_view.h
src/: hand_check.c  hand_check.h  state_ankan.c  state_chi.c  state_discard.c  state_init.c  state_internal.h  state_kakan.c  state_kan.c  state_minkan.c  state_ops.c  state_ops.h  state_pass.c  state_pon.c  state_query.c  state_riichi.c  state_ron.c  state_round.c  state_score.c  state_score.h  state_settle.c  state_tsumo.c  state_yaku.c
src/core/: hand_check.c  hand_check.h  state_chi.c  state_discard.c  state_internal.h  state_kan.c  state_ops.c  state_ops.h  state_pass.c  state_pon.c  state_query.c  state_riichi.c  state_ron.c  state_round.c  state_round_init.h  state_score.c  state_score.h  state_settle.c  state_tsumo.c  state_yaku.c
src/manager/: manager_actions.c  manager_flow.c  player_view.c
tests/: test_core_rules.c
tests/core/: test_core_rules.c
tests/manager/: test_manager_flow.c
